// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem package.json imports > should resolve package.json imports with a * and esbuild transformer > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

exports.warns = x$1;
"
`;

exports[`packem package.json imports > should resolve package.json imports with a * and esbuild transformer > mjs output 1`] = `
"const x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

export { x$1 as warns };
"
`;

exports[`packem package.json imports > should resolve package.json imports with a * and oxc transformer > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

exports.warns = x$1;
"
`;

exports[`packem package.json imports > should resolve package.json imports with a * and oxc transformer > mjs output 1`] = `
"const x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

export { x$1 as warns };
"
`;

exports[`packem package.json imports > should resolve package.json imports with a * and sucrase transformer > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

exports.warns = x$1;
"
`;

exports[`packem package.json imports > should resolve package.json imports with a * and sucrase transformer > mjs output 1`] = `
"const x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

export { x$1 as warns };
"
`;

exports[`packem package.json imports > should resolve package.json imports with a * and swc transformer > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

var x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

exports.warns = x$1;
"
`;

exports[`packem package.json imports > should resolve package.json imports with a * and swc transformer > mjs output 1`] = `
"var x = 2;

const x$1 = /*#__PURE__*/Object.defineProperty({
	__proto__: null,
	x
}, Symbol.toStringTag, { value: 'Module' });

export { x$1 as warns };
"
`;
